--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "daisyui": "^2.46.0",
     "dotenv": "^16.0.3",
     "firebase": "^9.15.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-moment": "^1.1.2",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
